# zemax2raysect

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
src/zemax2raysect/: __init__.py  field.py  materials.py  readzmx.py  surface.py
src/zemax2raysect/analysis/: __init__.py  ray_samplers.py  samplers.py  spot.py
src/zemax2raysect/builders/: __init__.py  abstract.py  base.py  common.py  cylindrical.py  flat.py  node.py  spherical.py  surface.py  toroidal.py
src/zemax2raysect/primitive/: __init__.pxd  __init__.py  torus.pxd  torus.py  torus.pyx  utility.pxd  utility.pyx
src/zemax2raysect/primitive/lens/: __init__.py  cylindrical.pyx  spherical.pyx  toric.pyx
src/zemax2raysect/primitive/mirror/: __init__.pxd  __init__.py  cylindrical.pyx  spherical.pyx  toric.pyx
src/zemax2raysect/primitive/surface/: __init__.pxd  __init__.py  circle.pxd  circle.pyx  cylinder_segment.pxd  cylinder_segment.pyx  rectangle.pxd  rectangle.pyx  sphere_segment.pxd  sphere_segment.pyx  torus_segment.pxd  torus_segment.pyx  triangle.pxd  triangle.pyx
