[tool.poetry]
name = "zemax2raysect"
version = "0.1.0"
description = "Convert Zemax' ZMX file into a Raysect Node"
authors = ["Aleksei Shabashov <a.shabashov@iterrf.ru>"]
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
cython = "3.0a5"
numpy = "1.19.4"
raysect = "0.7.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
ipympl = "^0.9.2"
sympy = "^1.11.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools",
    "cython==3.0a5",
    "numpy==1.19.4",
    "raysect==0.7.1",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = 'black'
known_raysect = ['raysect']
known_z2r = ['zemax2raysect']
sections = [
    'FUTURE',
    'STDLIB',
    'FIRSTPARTY',
    'THIRDPARTY',
    'RAYSECT',
    'Z2R',
    'LOCALFOLDER',
]

# [tool.flakeheaven]
# format = "default"
# max_line_length = 99   
# max_doc_length = 99
# strictness = "short"
# docstring_style = "numpy"
# docstring_convention = "numpy"
# exclude = ["__init__.py"]

# [tool.flakeheaven.plugins]
# "flake8-*" = ["+*"]
# mccabe = ["+*"]
# pyflakes = ["+*", "-F401", "-F841"]
# pycodestyle = ["+*", "-W503", "-E203"]

[tool.ruff]
line-length = 99
target-version = "py38"
select = ["E", "F", "B", "C4", "D", "SIM", "ANN", "UP", "RET"]
ignore = ["D203", "D212", "D213"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pycodestyle]
max-doc-length = 99

[tool.ruff.pydocstyle]
convention = "numpy"
